--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,4 +6,6 @@
 
 <button [routerLink]="['/socket']">socket</button>
 
+<button [routerLink]="['/guard']">guard</button>
+
 <router-outlet></router-outlet>
