--- a/client/src/app/socket/socket.component.html
+++ b/client/src/app/socket/socket.component.html
@@ -1,4 +1,6 @@
 <div>
+    <h3>socket</h3>
+
     <h3>1. 먼저 참가할 방 이름과 사용자 이름을 입력해주세요.</h3>
     <div class="form">
         <form [formGroup]="joinRoomForm" class="example-form">
