--- a/client/src/app/guard/guard.component.html
+++ b/client/src/app/guard/guard.component.html
@@ -1,3 +1,12 @@
 <div>
-    <button></button>
+    <h3>guard</h3>
+    <div>
+        <h5>로그인 토큰 대신 localStorage token으로 예시</h5>
+        <button (click)="addToken()">Token 생성</button>
+        <button (click)="removeToken()">Token 삭제</button>
+    </div>
+    
+    <div>
+        <button [routerLink]="['/guard-test']">guard test</button>
+    </div>
 </div>
