--- a/client/src/app/guard/guard.component.html
+++ b/client/src/app/guard/guard.component.html
@@ -7,6 +7,6 @@
     </div>
     
     <div>
-        <button [routerLink]="['/guard-test']">guard test</button>
+        <button [routerLink]="['/guard-test']">guard test --- [routing]</button>
     </div>
 </div>
