--- a/client/src/app/guard/guard.component.html
+++ b/client/src/app/guard/guard.component.html
@@ -1,11 +1,11 @@
 <div>
     <h3>guard</h3>
     <div>
-        <h5>로그인 토큰 대신 localStorage token으로 예시</h5>
+        <h5>로그인 토큰 대신 localStorage 토큰으로 예시</h5>
         <button (click)="addToken()">Token 생성</button>
-        <button (click)="removeToken()">Token 삭제</button>
+        <button (click)="removeToken()">Token 삭제</button> ------- DevTools Local Storage 확인
     </div>
-    
+    <br>
     <div>
         <button [routerLink]="['/guard-test']">guard test --- [routing]</button>
     </div>
