--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,4 +8,6 @@
 
 <button [routerLink]="['/guard']">guard</button>
 
+<button [routerLink]="['/auth']">login</button>
+
 <router-outlet></router-outlet>
