--- a/client/src/app/auth/sign-in/sign-in.component.html
+++ b/client/src/app/auth/sign-in/sign-in.component.html
@@ -11,6 +11,7 @@
     <div>
         <h3>2. 로그인</h3>
         <h5>id: 1 / password: 1</h5>
+        <h5>id: 2 / password: 1</h5>
         <div class="form">
             <form [formGroup]="signInForm" class="example-form">
                 <div>
