--- a/client/src/app/auth/sign-guard/sign-guard.component.html
+++ b/client/src/app/auth/sign-guard/sign-guard.component.html
@@ -1,3 +1,34 @@
 <h3>{{user?.name}} 님 안녕하세요!</h3>
 <br>
 <button (click)="logOut()">로그아웃</button>
+
+
+
+
+<div>
+    <h3>To do list</h3>
+
+    <div class="todoList_container">
+        <div class="form">
+            <form [formGroup]="todoForm" class="example-form">
+				<input type="text" placeholder="할 일" formControlName="todo">
+				<button type="submit" (click)="aggregate_addTodo()">할일 추가</button>
+			</form>
+        </div>
+    </div>
+    <br>
+    <div>
+        <button (click)="aggregate_getAllTodo()">모든 목록 보기</button>
+        <button (click)="aggregate_getMyTodo()">내 목록 보기</button>
+    </div>
+
+    <div *ngFor="let item of todoData" >
+
+        --------------------------------------------------------------------------------------
+        <li class="list">
+            <span style="width: 150px;">{{item.todo}} </span>
+            <span style="width: 150px;">{{item?.name}} </span>
+        </li>
+    </div>
+        --------------------------------------------------------------------------------------
+</div>
