--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button [routerLink]="['/auth/todoList']">todo List</button>
+<button [routerLink]="['/todoList']">todo List</button>
 
 <button [routerLink]="['/file']">file upload / download</button>
 
